ClaimFlow/force-app/main/default/objects/Claim_History__c/Claim_History__c.object-meta.xml
<CustomObject>
    <label>Claim History</label>
    <pluralLabel>Claim History</pluralLabel>
    <nameField>
        <label>History Number</label>
        <type>AutoNumber</type>
        <displayFormat>CH-{00000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>