ClaimFlow/force-app/main/default/objects/Claim_History__c/fields/Changed_By__c.field-meta.xml
<CustomField>
    <fullName>Changed_By__c</fullName>
    <label>Changed By</label>
    <type>Text</type>
    <length>120</length>
</CustomField>