ClaimFlow/force-app/main/default/objects/Claim_History__c/fields/Claim__c.field-meta.xml
<CustomField>
    <fullName>Claim__c</fullName>
    <label>Claim</label>
    <type>Lookup</type>
    <referenceTo>Claim__c</referenceTo>
    <relationshipLabel>Claim History</relationshipLabel>
    <relationshipName>Claim_History</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>