ClaimFlow/force-app/main/default/objects/Claim_History__c/fields/From_Stage__c.field-meta.xml
<CustomField>
    <fullName>From_Stage__c</fullName>
    <label>From Stage</label>
    <type>Text</type>
    <length>40</length>
</CustomField>