ClaimFlow/force-app/main/default/objects/Claim_History__c/fields/To_Stage__c.field-meta.xml
<CustomField>
    <fullName>To_Stage__c</fullName>
    <label>To Stage</label>
    <type>Text</type>
    <length>40</length>
</CustomField>